<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_activityMain_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/sky_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/image_activityMain_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/round_icon_padding"
            android:background="@drawable/background_round"
            android:src="@drawable/ic_update"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txt_activityMain_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:text="@string/actualizacion_disponible"
            android:layout_gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@id/image_activityMain_update"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/button_activityMain_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/descargar"
            android:textAllCaps="false"
            android:textColor="@color/sky_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_activityMain_dow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textSize="@dimen/text_header_one"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/layout_activityMain_update"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text_activityMain_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/september_30"
        android:textSize="@dimen/text_paragraph_large"
        android:textColor="@color/primary_text"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="@id/button_activityMain_finishWorkday"
        app:layout_constraintBottom_toBottomOf="@id/button_activityMain_finishWorkday"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_activityMain_finishWorkday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/end_workday"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/text_activityMain_dow"
        app:layout_constraintEnd_toEndOf="parent"
        style="?attr/materialButtonOutlinedStyle"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_activityMain_placeInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/margin_small"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/button_activityMain_finishWorkday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginVertical="@dimen/margin_small"
            >

            <TextView
                android:id="@+id/text_activityMain_placeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize="@dimen/text_header_three"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ImageView
                android:id="@+id/image_activityMain_directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_directions"
                app:tint="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_activityMain_placeName"
                app:layout_constraintBottom_toBottomOf="@id/text_activityMain_placeName"
                />

            <TextView
                android:id="@+id/text_activityMain_placeAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:textSize="@dimen/text_paragraph_medium"
                android:layout_marginTop="@dimen/margin_xs"
                android:textColor="@color/primary_text"
                app:layout_constraintTop_toBottomOf="@id/text_activityMain_placeName"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/text_activityMain_placeSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/place_schedule"
                android:textColor="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@id/text_activityMain_placeAddress"
                app:layout_constraintStart_toStartOf="parent"
                />

            <LinearLayout
                android:id="@+id/layout_activityMain_actions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_activityMain_placeSchedule"
                >

                <Button
                    android:id="@+id/button_activityMain_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_xs"
                    android:backgroundTint="@color/orange"
                    android:text="@string/start"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button_activityMain_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_xs"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/details"
                    android:textColor="@color/orange"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>